# ocel

./: .gitignore  Cargo.toml  GETTING_STARTED.md  dist-workspace.toml  package.json
.changeset/: config.json  good-llamas-rhyme.md  pre.json  sweet-rocks-open.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: bun.rs  coordinator.rs  engine.rs  follower.rs  lock.rs  main.rs  ocel.rs  project.rs  rpc.rs  server.rs  tofu.rs
cli/src/client/: node.rs
cli/src/cmd/: add.rs  bootstrap.rs  dev.rs  init.rs  mod.rs
cli/src/components/: bucket.rs  default.rs  lambda.rs  mod.rs  postgres.rs  workflow.rs
cli/src/server/: router.rs
cli/src/stacks/: core.json
cli/src/utils/: archive.rs  find_up.rs  globby.rs  json.rs  mod.rs  nano_id.rs  watcher.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  ocel.rs  project.rs
crates/cli/src/client/: mod.rs  node.rs
crates/cli/src/cmd/: dev.rs  mod.rs
crates/cli/src/utils/: mod.rs
examples/blob-upload/: README.md  index.html  package.json
examples/blob-upload/src/: App.tsx  index.css
examples/hono/: ocel.json  package.json  tsconfig.json
examples/hono/src/: app.ts  index.ts
examples/hono/src/infra/: db.ts  hello-fn.ts  index.ts  storage.ts
examples/hono/src/workflows/: welcome-email.ts
examples/hono/workflows/: user-signup.ts
examples/random/: ocel.json  package.json
examples/random/src/: function.ts
