[package]
name = "ocel"
version = "0.0.0-alpha.0"
edition = "2024"
repository = "https://github.com/ndaba1/ocel"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-config = "1.8.12"
aws-sdk-cloudformation = "1.104.0"
aws-sdk-ec2 = "1.199.0"
aws-sdk-ecs = "1.109.0"
aws-sdk-lambda = "1.112.0"
aws-smithy-types = "1.3.5"
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
flate2 = "1.1.5"
fs2 = "0.4.3"
futures = "0.3.31"
globset = "0.4.18"
globwalk = "0.9.1"
indicatif = "0.18.3"
inquire = "0.9.1"
inquire-derive = "0.9.1"
nix = { version = "0.30.1", features = ["signal", "process"] }
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
notify-debouncer-mini = "0.7.0"
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tar = "0.4.44"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["fs", "full", "net", "process", "rt-multi-thread", "signal", "sync"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
walkdir = "2.5.0"
whoami = "1.6.1"
zip = "7.0.0"
